attempt to fix banner height ticking on safari with height constraint. also modified partners page to have detail page.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -492,6 +492,11 @@ ul.link-list {
 	}
 }
 @media (min-width: 1200px) {
+	#banner {
+		.bg {
+			height: 201px;
+		}
+	}
 	#nav {
 		.right;
 	}
